Fix snapmail remove button alignment. (#1629)
* Fix the alignment of the snapmail remove button.

* Fix the alignment of the remove snapmail box.

* Remove extra empty line.

--- a/app/assets/stylesheets/views/snapmails/snapmails.scss
+++ b/app/assets/stylesheets/views/snapmails/snapmails.scss
@@ -254,8 +254,12 @@
   }
 }
 
-.box-snapmail input {
-  margin-right: 10px;
+.box-snapmail {
+  margin-left: -30px;
+
+  input {
+    margin-right: 15px;
+  }
 }
 
 .snapmail {
